# Sura

./: .gitattributes  .gitignore  CLAUDE.md  Dashboard_Analisis_SURA_2026.pbix  README.md  pyproject.toml
data/: Detalle Ranking por Item Anonimizado.csv  Detalle_Empresa.txt  Diccionario_Datos.xlsx  Maestro.xlsx  Ordenado.txt  Tareas_Programadas_canceladas_2025.txt  Tareas_prestador_bloque.xlsx
docs/: BAKE_GOLD_VERTEX.md  BQ_DASHBOARD_CONTRACTS.md  CLUSTER_PROFILES.md  DESCRIPCION_DATOS.md  DIAGNOSTICO_ANALISIS.md  Diagnostico_y_Analisis_SURA_2026.docx  ER_DIAGRAMA.md  EXECUTIVE_FINDINGS.md  EXPERIMENTO_UMAP_HDBSCAN.md  GUIA_COLORES.md  INSIGHTS_PRECLUSTERING.md  LIMPIEZA_TAREAS_PRESTADOR_Y_DETALLE_EMPRESA.md  MODELO_TECNICO.md  NOTAS.md  PREGUNTAS_ESTRATEGICAS_DANIEL.md  PREGUNTAS_QA_SURA.md  PREGUNTAS_QA_SURA_ROY.md  PROCESO_GOLD.md  Preguntas_SURA_PABLO.md  RETO.md  SIMULACION_IMPACTO.md  SURA_QA.md
modules/: main.tf
notebooks/: Analisis_Exploratorio_SURA_2026.ipynb  clustering_VAE_prestador_tareas.ipynb  clustering_tradicional_prestadores_tareas.ipynb  prog_test_pre_clustering_v8.ipynb
scripts/: bake_gold.py  benchmark.py  compute_isc.py  enrich_assignments.py  inspect_detalle_empresa.py  inspect_tareas_prestador.py  inspect_tareas_programadas.py  load_to_bigquery.py  load_to_bigquery_gold.py  load_to_parquet.py  publish_to_bq.py  sandbox_hdbscan.py  scenario_comparison.py  viz_clusters.py
src/: config.py  extract.py  load.py
src/assignment/: __init__.py  exporter.py  optimizer.py  score.py
src/gold/: _persistence.py  cluster_profiles.py  clustering_input.py  clustering_model.py  feat_empresa.py  feat_prestador.py  feat_prestador_perfil.py  feat_prestador_performance.py
src/monitoring/: kpis.py  (+2 more)
(+2 files in other folders)
