[project]
name = "sura"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "gcsfs>=2026.2.0",
    "google-cloud-bigquery>=3.40.1",
    "google-cloud-storage>=3.10.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pandera>=0.30.1",
    "polars>=1.39.3",
]
