[project]
name = "sura"
version = "0.1.0"
description = "Estrategia de clústeres inteligentes para optimizar la asignación de prestadores de salud"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastexcel>=0.19.0",
    "gcsfs>=2026.2.0",
    "google-cloud-bigquery>=3.40.1",
    "google-cloud-bigquery-storage>=2.36.2",
    "google-cloud-storage>=3.10.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pandera>=0.30.1",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.5",
    "umap-learn>=0.5.6",
    "joblib>=1.4",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "plotly>=5.24",
    "streamlit>=1.39",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29",
    "jupyter>=1.1",
]
